<resources>
    <string name="app_name">Kalkulator</string>
    <string name="_0">0</string>
    <string name="nic">nic</string>
    <string name="dot">.</string>
    <string name="equals">=</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="plus">+</string>
    <string name="buttonPlus">+</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="buttonMinus">-</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="buttonMultiply">x</string>
    <string name="ButtonAC">AC</string>
    <string name="buttonPlusMinus">+/-</string>
    <string name="buttonPercent">%</string>
    <string name="buttonDivide">/</string>
    <string name="buttonSquare">x^2</string>
    <string name="Button33">x^3</string>
    <string name="buttonSqrt">sqrt(x)</string>
    <string name="buttonLog">Log10</string>
    <string name="buttonSIL">!</string>
</resources>
