<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/numberTextView"
        android:layout_width="305dp"
        android:layout_height="57dp"
        android:layout_marginTop="160dp"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="292dp"
        android:layout_height="240dp"

        android:addStatesFromChildren="true"
        android:shrinkColumns="*"
        android:stretchColumns="*"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberTextView"
        app:layout_constraintVertical_bias="0.892">


        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <Button
                android:id="@+id/buttonAC"
                style="@style/buttonStyle1"
                android:text="@string/ButtonAC" />

            <Button
                android:id="@+id/buttonPlusMinus"
                style="@style/buttonStyle1"
                android:text="@string/buttonPlusMinus" />

            <Button
                android:id="@+id/buttonPercent"
                style="@style/buttonStyle1"
                android:text="@string/buttonPercent" />

            <Button
                android:id="@+id/buttonDivide"
                style="@style/buttonStyle2"
                android:text="@string/buttonDivide" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button7"
                style="@style/buttonStyle1"
                android:text="@string/button7" />

            <Button
                android:id="@+id/button8"
                style="@style/buttonStyle1"
                android:text="@string/button8" />

            <Button
                android:id="@+id/button9"
                style="@style/buttonStyle1"
                android:text="@string/button9" />

            <Button
                android:id="@+id/buttonMultiply"
                style="@style/buttonStyle2"
                android:text="@string/buttonMultiply" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button4"
                style="@style/buttonStyle1"
                android:text="@string/button4" />

            <Button
                android:id="@+id/button5"
                style="@style/buttonStyle1"
                android:text="@string/button5" />

            <Button
                android:id="@+id/button6"
                style="@style/buttonStyle1"
                android:text="@string/button6" />

            <Button
                android:id="@+id/buttonMinus"
                style="@style/buttonStyle2"
                android:text="@string/buttonMinus" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button1"
                style="@style/buttonStyle1"
                android:layout_width="71dp"
                android:text="@string/button1" />

            <Button
                android:id="@+id/button2"
                style="@style/buttonStyle1"
                android:text="@string/button2" />

            <Button
                android:id="@+id/button3"
                style="@style/buttonStyle1"
                android:text="@string/button3" />

            <Button
                android:id="@+id/buttonPlus"
                style="@style/buttonStyle2"
                android:text="@string/buttonPlus" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="false">

            <Button
                android:id="@+id/button0"
                style="@style/buttonStyle1"
                android:text="@string/_0" />

            <Button
                android:id="@+id/buttonN"
                style="@style/buttonStyle1"
                android:clickable="false"
                android:text="@string/nic" />

            <Button
                android:id="@+id/dot"
                style="@style/buttonStyle1"
                android:text="@string/dot" />

            <Button
                android:id="@+id/buttonEquals"
                style="@style/buttonStyle2"
                android:text="@string/equals" />

        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/buttonSQUARE"
        style="@style/buttonStyle3"
        android:layout_width="2dp"
        android:layout_height="2dp"
        android:text="@string/buttonSquare"
        tools:layout_editor_absoluteX="-34dp"
        tools:layout_editor_absoluteY="-4dp" />

    <Button
        android:id="@+id/button33"
        style="@style/buttonStyle3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/Button33"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-23dp" />

    <Button
        android:id="@+id/buttonSqrt"
        style="@style/buttonStyle3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/buttonSqrt"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="-21dp" />

    <Button
        android:id="@+id/buttonSIL"
        style="@style/buttonStyle3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/buttonSIL"
        tools:layout_editor_absoluteX="236dp"
        tools:layout_editor_absoluteY="-30dp" />

    <Button
        android:id="@+id/buttonLog"
        style="@style/buttonStyle3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/buttonLog"
        tools:layout_editor_absoluteX="363dp" />


</androidx.constraintlayout.widget.ConstraintLayout>